Fix windows terminal word delimiters
to allow URLs

--- a/content/posts/wsl2.adoc
+++ b/content/posts/wsl2.adoc
@@ -57,8 +57,8 @@ NOTE: This covers v0.8.
     "copyOnSelect": true,
 
     // Removed the following characters from the default list to allow double clicking
-    // of paths to select and copy them: '/', '\', '.'
-    "wordDelimiters": " ()\"',:;<>~!@#$%^&*|+=[]{}~?\u2502",
+    // of paths and URLs to select and copy them: '/', '\', '.', ':'
+    "wordDelimiters": " ()\"',;<>~!@#$%^&*|+=[]{}~?\u2502",
 
     "profiles": {
 	"defaults": {
