--- a/content/posts/patagonia.adoc
+++ b/content/posts/patagonia.adoc
@@ -11,30 +11,30 @@ My Houdini, the blue layer pictured in these photos, met a tragic end a few mont
 After 6 years together our paternship came to a sudden end.
 I was in disbelief.
 It wasn't due to some epic alpine adventure.
-It was caused by a puppy, a cute, energetic, teething puppy.
+It was caused by a puppy; a cute, energetic, teething puppy.
 
 .Matthes Crest during a Tenaya-Matthes-Cathedral linkup. Photo: Tami Abdollah
-image::/images/houdini/tmc.jpg[]
+image::/images/houdini/tmc.jpg[width=600]
 
 At less than 4oz and $99 dollars I was initially very unsure about the purchase.
 However, time and time again the Houdini has brought me comfort in uncomfortable conditions.
-The Houdini has grown to be one of my most versatile and prized layers.
+The Houdini has grown to be one of my most beloved layers.
 
 .A winter ascent of Mt Baldy. Photo: Sherman Lam
-image::/images/houdini/baldy.jpg[]
+image::/images/houdini/baldy.jpg[width=800]
 
 All was not lost.
 Patagonia has an execellent complementary repair program.
 
 .Tahquitz summit after The Long Climb. Photo: Rob Donnelly
-image::/images/houdini/tahquitz.jpg[]
+image::/images/houdini/tahquitz.jpg[width=600]
 
 I once again walked into the Pasadena store with torn garmet in hand and laid bare the mistake I had made.
 The associate had heard it all before.
 Man's best friend strikes again.
 
 .An attempt on Clyde Minaret. Photo: Sherman Lam
-image::/images/houdini/clyde-minaret.jpg[]
+image::/images/houdini/clyde-minaret.jpg[width=600]
 
 The associate detailed the repair process.
 If they had the material in stock they'd do the repair in-house.
@@ -45,7 +45,7 @@ When it was all said and done they'd ship it back to me.
 All free of charge.
 
 .Mt Conness West Ridge during a linkup of the West and North ridges. Photo: Rob Donnelly
-image::/images/houdini/conness-w2n.jpg[]
+image::/images/houdini/conness-w2n.jpg[width=800]
 
 I was excited for my one-of-a-kind patch-work Houdini.
 The evidence of repair would be a badge of honor.
@@ -54,8 +54,8 @@ A week later the Coronavirus hit the US and everything shutdown.
 Patagonia shutdown their returns, exchanges, and repairs.
 I wouldn't see my Houdini for awhile but Patagonia was being Patagonia doing the right thing.
 
-.Hitchhiking to Angels Landing. Photo: Unknown
-image::/images/houdini/angels-landing.jpg[]
+.Hitchhiking to Angels Landing. Photo: Fellow Hiker
+image::/images/houdini/angels-landing.jpg[width=800]
 
 Fast forward 4 months later.
 Still no Houdini.
@@ -66,7 +66,7 @@ Things get lost.
 People forget to call back.
 
 .Mountain biking in Tahoe. Photo: Rob Donnelly
-image::/images/houdini/tahoe-mtb.jpg[]
+image::/images/houdini/tahoe-mtb.jpg[width=600]
 
 Less than a week later, I got a call from Miles.
 Miles began to tell me the Pasadena store didn't have a record of the repair.
@@ -77,17 +77,18 @@ On one hand I had lost my adventure companion of 6 years.
 On the other I was being offered to be made more than whole without having to fight for it.
 
 .Joshua Tree with the family. Photo: Ashley Donnelly
-image::/images/houdini/jt.jpg[]
+image::/images/houdini/jt.jpg[width=600]
 
-Patagonia is a unicorn company.
+Patagonia is a unicorn and not in the financial sense.
 It's not just their customer service.
 Patagonia makes great products.
 Patagonia fights for the environment.
 Patagonia minimizes their harm.
 Patagonia respects people.
+Few other companies make me feel this good to be a customer.
 
 .Tahquitz Finger Trip. Photo: Aaron Jacobs-Smith
-image::/images/houdini/tahquitz-finger-trip.jpg[]
+image::/images/houdini/tahquitz-finger-trip.jpg[width=800]
 
 When you buy Patagonia you aren't buying just a piece of clothing.
-You are buying a company that puts people and the environment first.
+You are buying into a company that puts people and the environment first.
