Fix publish command
to account for changes to latest Docker image

--- a/README.adoc
+++ b/README.adoc
@@ -15,7 +15,10 @@ git clone git@github.com:rfdonnelly/rfdonnelly.github.io-source.git --recursive
 
 [source,sh]
 ----
-docker run --rm -it -v $(pwd):/src -u $(id -u):$(id -g) klakegg/hugo:asciidoctor \
+docker run --rm -it \
+    -v $(pwd):/src \
+    -u $(id -u):$(id -g) \
+    klakegg/hugo:asciidoctor \
     new posts/<post-name>.adoc
 ----
 
@@ -23,7 +26,10 @@ docker run --rm -it -v $(pwd):/src -u $(id -u):$(id -g) klakegg/hugo:asciidoctor
 
 [source,sh]
 ----
-docker run --rm -it -v $(pwd):/src -p 1313:1313 klakegg/hugo:asciidoctor \
+docker run --rm -it \
+    -v $(pwd):/src \
+    -p 1313:1313 \
+    klakegg/hugo:asciidoctor \
     serve --bind 0.0.0.0 --buildDrafts
 ----
 
@@ -31,7 +37,11 @@ docker run --rm -it -v $(pwd):/src -p 1313:1313 klakegg/hugo:asciidoctor \
 
 [source,sh]
 ----
-docker run --rm -it -v $(pwd):/src -u $(id -u):$(id -g) klakegg/hugo:asciidoctor
+docker run --rm -it \
+    -v $(pwd):/src \
+    -v $(pwd)/public:/target \
+    -u $(id -u):$(id -g) \
+    klakegg/hugo:asciidoctor
 cd public
 git add .
 git commit -m "Publish $(date)"
