--- a/content/posts/patagonia.adoc
+++ b/content/posts/patagonia.adoc
@@ -90,4 +90,4 @@ Few other companies make me feel this good to be a customer.
 image::/images/houdini/tahquitz-finger-trip.jpg[width=800]
 
 When you buy Patagonia you aren't buying just a piece of clothing.
-You are buying into a company that puts people and the environment first.
+You are also investing in people and the environment.
