fix: unused photo

--- a/content/posts/patagonia.adoc
+++ b/content/posts/patagonia.adoc
@@ -91,3 +91,6 @@ image::/images/houdini/tahquitz-finger-trip.jpg[width=800]
 
 When you buy Patagonia you aren't buying just a piece of clothing.
 You are also investing in people and the environment.
+
+.Bear Creek Spire. Photo: Brent Norum 2018-06-23
+image::/images/houdini/bcs.jpg[width=800]
