Add photo dates

--- a/content/posts/patagonia.adoc
+++ b/content/posts/patagonia.adoc
@@ -12,27 +12,27 @@ I was in disbelief.
 It wasn't due to some epic alpine adventure.
 It was caused by a puppy; a cute, energetic, teething puppy.
 
-.Matthes Crest during a Tenaya-Matthes-Cathedral linkup. Photo: Tami Abdollah
+.Matthes Crest during a Tenaya-Matthes-Cathedral linkup. Photo: Tami Abdollah 2015-09-05
 image::/images/houdini/tmc.jpg[width=600]
 
 At less than 4oz and $99 dollars I was initially very unsure about the purchase.
 However, time and time again the Houdini has brought me comfort in uncomfortable conditions.
 The Houdini has grown to be one of my most beloved layers.
 
-.A winter ascent of Mt Baldy. Photo: Sherman Lam
+.A winter ascent of Mt Baldy. Photo: Sherman Lam 2020-01-04
 image::/images/houdini/baldy.jpg[width=800]
 
 All was not lost.
-Patagonia has an execellent complementary repair program.
+Patagonia has an excellent complementary repair program.
 
-.Tahquitz summit after The Long Climb. Photo: Rob Donnelly
+.Tahquitz summit after The Long Climb. Photo: Rob Donnelly 2018-05-27
 image::/images/houdini/tahquitz.jpg[width=600]
 
-I once again walked into the Pasadena store with torn garmet in hand and laid bare the mistake I had made.
+This was the second time I'd walk into the Pasadena store with a torn garmet in hand and lay bare the mistake I had made.
 The associate had heard it all before.
 Man's best friend strikes again.
 
-.An attempt on Clyde Minaret. Photo: Sherman Lam
+.An attempt on Clyde Minaret. Photo: Sherman Lam 2019-08-01
 image::/images/houdini/clyde-minaret.jpg[width=600]
 
 The associate detailed the repair process.
@@ -43,7 +43,7 @@ They might need to replace the entire sleeve.
 When it was all said and done they'd ship it back to me.
 All free of charge.
 
-.Mt Conness West Ridge during a linkup of the West and North ridges. Photo: Rob Donnelly
+.Mt Conness West Ridge during a linkup of the West and North ridges. Photo: Rob Donnelly 2018-08-31
 image::/images/houdini/conness-w2n.jpg[width=800]
 
 I was excited for my one-of-a-kind patch-work Houdini.
@@ -53,7 +53,7 @@ A week later the Coronavirus hit the US and everything shutdown.
 Patagonia shutdown their returns, exchanges, and repairs.
 I wouldn't see my Houdini for awhile but Patagonia was being Patagonia doing the right thing.
 
-.Hitchhiking to Angels Landing. Photo: Fellow Hiker
+.Hitchhiking to Angels Landing. Photo: Fellow Hiker 2019-03-25
 image::/images/houdini/angels-landing.jpg[width=800]
 
 Fast forward 4 months later.
@@ -64,7 +64,7 @@ I left the conversation with a mix of hope and low expectations.
 Things get lost.
 People forget to call back.
 
-.Mountain biking in Tahoe. Photo: Rob Donnelly
+.Mountain biking in Tahoe. Photo: Rob Donnelly 2013-10-05
 image::/images/houdini/tahoe-mtb.jpg[width=600]
 
 Less than a week later, I got a call from Miles.
@@ -75,7 +75,7 @@ I was having trouble processing the news.
 On one hand I had lost my adventure companion of 6 years.
 On the other I was being offered to be made more than whole without having to fight for it.
 
-.Joshua Tree with the family. Photo: Ashley Donnelly
+.Joshua Tree with the family. Photo: Ashley Donnelly 2014-11-30
 image::/images/houdini/jt.jpg[width=600]
 
 Patagonia is a unicorn and not in the financial sense.
@@ -86,7 +86,7 @@ Patagonia minimizes their harm.
 Patagonia respects people.
 Few other companies make me feel this good to be a customer.
 
-.Tahquitz Finger Trip. Photo: Aaron Jacobs-Smith
+.Tahquitz Finger Trip. Photo: Aaron Jacobs-Smith 2019-06-30
 image::/images/houdini/tahquitz-finger-trip.jpg[width=800]
 
 When you buy Patagonia you aren't buying just a piece of clothing.
