--- a/content/posts/patagonia.adoc
+++ b/content/posts/patagonia.adoc
@@ -81,11 +81,10 @@ On the other I was being offered to be made more than whole without having to fi
 .Joshua Tree with the family. Photo: Ashley Donnelly 2014-11-30
 image::/images/houdini/jt.jpg[width=600]
 
-Patagonia is a unicorn and not in the financial sense.
+Patagonia is a unicorn and not in the financial sense; in a more important sense.
 It's not just their customer service.
 Patagonia makes great products.
 Patagonia fights for the environment.
-Patagonia minimizes their harm.
 Patagonia respects people.
 Few other companies make me feel this good to be a customer.
 
@@ -93,4 +92,4 @@ Few other companies make me feel this good to be a customer.
 image::/images/houdini/tahquitz-finger-trip.jpg[width=800]
 
 When you buy Patagonia you aren't buying just a piece of clothing.
-You are also investing in people and the environment.
+You are also investing in people and in the environment.
