--- a/content/posts/patagonia.adoc
+++ b/content/posts/patagonia.adoc
@@ -85,8 +85,9 @@ Patagonia is a unicorn and not in the financial sense; in a more important sense
 It's not just their customer service.
 Patagonia makes great products.
 Patagonia fights for the environment.
-Patagonia respects people.
-Few other companies make me feel this good to be a customer.
+Patagonia values people.
+
+Few companies make me feel this good to be a customer.
 
 .Tahquitz Finger Trip. Photo: Aaron Jacobs-Smith 2019-06-30
 image::/images/houdini/tahquitz-finger-trip.jpg[width=800]
