--- a/content/posts/wsl2.adoc
+++ b/content/posts/wsl2.adoc
@@ -1,10 +1,15 @@
 ---
 title: "WSL2"
 date: 2020-02-03T22:44:58Z
-draft: true
 ---
 
-This documents the setup of WSL2 for local and remote development.
+:idprefix:
+:idseparator: -
+
+NOTE: Updated on 2020-11-25.
+Added <<ssh-into-wsl2>>.
+
+This article documents the setup of WSL2 for local and remote development.
 Local development is supported by Docker.
 For remote development, WSL2 effectively acts as a bridge.
 Remote development is done via SSH with support for X11 forwarding and port forwarding.
@@ -150,9 +155,9 @@ Host *
 +
 It should display on your Windows desktop.
 
-== Setup SSH Port Forwarding
-
-TBD
+// == Setup SSH Port Forwarding
+//
+// TBD
 
 == Setup Pageant
 
@@ -178,4 +183,25 @@ if [ $? -ne 0 ]; then
         rm -f $SSH_AUTH_SOCK
         setsid nohup socat UNIX-LISTEN:$SSH_AUTH_SOCK,fork EXEC:$HOME/.ssh/wsl2-ssh-pageant.exe >/dev/null 2>&1 &
 fi
+----
+
+== SSH into WSL2
+
+Scott Hanselman has a great article on accessing WSL2 via Windows OpenSSH server titled https://www.hanselman.com/blog/the-easy-way-how-to-ssh-into-bash-and-wsl2-on-windows-10-from-an-external-machine[THE EASY WAY how to SSH into Bash and WSL2 on Windows 10 from an external machine].
+However, it only supports Bash.
+It doesn't support alternative shells like Zsh.
+
+The trick is to change the Windows OpenSSH server default shell to `C:\Windows\System32\wsl.exe` instead of `C:\Windows\System32\bash.exe`.
+This will use whatever shell WSL2 has been configured to use.
+
+[source]
+.So instead of
+----
+New-ItemProperty -Path "HKLM:\SOFTWARE\OpenSSH" -Name DefaultShell -Value "C:\WINDOWS\System32\bash.exe" -PropertyType String -Force
+----
+
+[source]
+.Use
+----
+New-ItemProperty -Path "HKLM:\SOFTWARE\OpenSSH" -Name DefaultShell -Value "C:\WINDOWS\System32\wsl.exe" -PropertyType String -Force
 ----
