--- a/content/posts/wsl2.adoc
+++ b/content/posts/wsl2.adoc
@@ -6,14 +6,14 @@ date: 2020-02-03T22:44:58Z
 :idprefix:
 :idseparator: -
 
-NOTE: Updated on 2020-11-25.
-Added <<ssh-into-wsl2>>.
+NOTE: 2020-11-25 -- Added <<ssh-into-wsl2>>.
+NOTE: 2020-11-27 -- Changed Docker from edge to stable.
 
 This article documents the setup of WSL2 for local and remote development.
 Local development is supported by Docker.
 For remote development, WSL2 effectively acts as a bridge.
-Remote development is done via SSH with support for X11 forwarding and port forwarding.
-This allows X11 applications to be run on the remote host and display on the Windows desktop and it allows a webserver to be run on the remote host and accessed via a local Windows port.
+Remote development is done via SSH with support for X11 forwarding.
+This allows X11 applications to be run on the remote host and display on the Windows desktop.
 
 == Install WSL2
 
@@ -33,13 +33,11 @@ This allows X11 applications to be run on the remote host and display on the Win
 
 The following will make Docker available from WSL2.
 
-. Download the https://docs.docker.com/docker-for-windows/edge-release-notes[latest edge release]
+. Download the https://docs.docker.com/docker-for-windows/release-notes/[latest stable release]
 
-. Follow the https://docs.docker.com/docker-for-windows/wsl-tech-preview[Docker WSL2 instructions]
+. Follow the https://docs.docker.com/docker-for-windows/wsl/[Docker WSL2 instructions]
 
 == Install Windows Terminal
-
-NOTE: This covers v0.8.
 
 . Install Windows Terminal from the Microsoft Store
 
@@ -52,7 +50,6 @@ NOTE: This covers v0.8.
 ----
 // To view the default settings, hold "alt" while clicking on the "Settings" button.
 // For documentation on these settings, see: https://aka.ms/terminal-documentation
-
 {
     "$schema": "https://aka.ms/terminal-profiles-schema",
 
@@ -61,12 +58,15 @@ NOTE: This covers v0.8.
     // Simplify copying
     "copyOnSelect": true,
 
+    // Disable multi-line paste warning
+    "multiLinePasteWarning": false,
+
     // Removed the following characters from the default list to allow double clicking
     // of paths and URLs to select and copy them: '/', '\', '.', ':'
     "wordDelimiters": " ()\"',;<>~!@#$%^&*|+=[]{}~?\u2502",
 
     "profiles": {
-	"defaults": {
+        "defaults": {
             // Make the cursor easier to find
             "cursorShape": "emptyBox"
         },
@@ -76,14 +76,14 @@ NOTE: This covers v0.8.
                 "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
                 "name": "Windows PowerShell",
                 "commandline": "powershell.exe",
-                "hidden": false
+                "hidden": true
             },
             {
                 // Make changes here to the cmd.exe profile
                 "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
                 "name": "cmd",
                 "commandline": "cmd.exe",
-                "hidden": false
+                "hidden": true
             },
             {
                 "guid": "{2c4de342-38b7-51cf-b940-2309a097f518}",
@@ -92,19 +92,16 @@ NOTE: This covers v0.8.
                 "source": "Windows.Terminal.Wsl",
 
                 // Fix the starting directory
-                "startingDirectory": "//wsl$/Ubuntu/home/<windows-username>"
+                "startingDirectory": "//wsl$/Ubuntu/home/rfdonnelly"
             },
             {
                 "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
-                "hidden": false,
+                "hidden": true,
                 "name": "Azure Cloud Shell",
                 "source": "Windows.Terminal.Azure"
             }
         ]
     },
-
-    // Add custom color schemes to this array
-    "schemes": [],
 
     // Add any keybinding overrides to this array.
     // To unbind a default keybinding, set the command to "unbound"
