--- a/content/posts/wsl2.adoc
+++ b/content/posts/wsl2.adoc
@@ -68,38 +68,27 @@ The following will make Docker available from WSL2.
     "profiles": {
         "defaults": {
             // Make the cursor easier to find
-            "cursorShape": "emptyBox"
+            "cursorShape": "emptyBox",
+
+            // Hide everything by default
+            "hidden": true,
         },
         "list": [
             {
-                // Make changes here to the powershell.exe profile
-                "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
-                "name": "Windows PowerShell",
-                "commandline": "powershell.exe",
-                "hidden": true
-            },
-            {
-                // Make changes here to the cmd.exe profile
-                "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
-                "name": "cmd",
-                "commandline": "cmd.exe",
-                "hidden": true
-            },
-            {
                 "guid": "{2c4de342-38b7-51cf-b940-2309a097f518}",
                 "hidden": false,
-                "name": "Ubuntu",
-                "source": "Windows.Terminal.Wsl",
+                "name": "WSL2",
 
-                // Fix the starting directory
-                "startingDirectory": "//wsl$/Ubuntu/home/rfdonnelly"
+                // Start WSL like any other profile (i.e. don't use "source")
+                // Start in Linux home directory instead of Windows home directory
+                "commandline": "wsl.exe ~",
+
+                // WORKAROUND: The right padding is more than it should be.
+                // Making it 0 seems to be equivalent to 8 on the left.
+                // Also hide the scrollbar so that it doesn't contribute to the padding.
+                "padding": "8, 8, 0, 0",
+                "scrollbarState": "hidden",
             },
-            {
-                "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
-                "hidden": true,
-                "name": "Azure Cloud Shell",
-                "source": "Windows.Terminal.Azure"
-            }
         ]
     },
 
