--- a/content/posts/vscode-remote-with-pageant.adoc
+++ b/content/posts/vscode-remote-with-pageant.adoc
@@ -1,26 +1,43 @@
 ---
-title: "VS Code Remote with Pageant"
+title: "Using Pageant with VS Code Remote Development"
 date: 2020-12-01T22:31:27Z
-draft: true
+tags:
+- Software
+- VS Code
+- SSH
 ---
 
-This post documents using VS Code Remote with Pageant.
+:experimental:
 
-You store your SSH keys in Pageant then instruct VS Code Remote to use them.
+This article documents using Pageant to manage SSH keys for VS Code Remote.
 
-VS Code Remote (October 2020 version 1.51.1) doesn't support Pageant out of the box.
-More specifically, VS Code Remote uses the Windows 10 native OpenSSH client and the OpenSSH client doesn't support Pageant.
+== Assumptions
+
+* https://code.visualstudio.com/[VS Code] and the https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.vscode-remote-extensionpack[VS Code Remote Development extension] is installed
+* https://the.earth.li/~sgtatham/putty/0.74/htmldoc/Chapter9.html#pageant[PuTTY Pageant] is being used to manage SSH keys
+* The remote host has a corresponding public key
+
+== Introduction
+
+VS Code Remote Development doesn't support Pageant out of the box.{wj}footnote:[As of VS Code v1.51.]
+More specifically, VS Code Remote Development uses the Windows 10 native OpenSSH client and the OpenSSH client doesn't support Pageant.
 A bridge is needed to make Pageant available to the OpenSSH client.
 
-This is where wsl-ssh-pageant comes in.
-wsl-ssh-pageant can make Pageant available to WSL or Windows OpenSSH client.
-We are going to use it to make Pageant available to Windows OpenSSH client.
+This is where `wsl-ssh-pageant` comes in.
+`wsl-ssh-pageant` can make Pageant available to WSL or the Windows OpenSSH client.
+We are going to use it to make Pageant available to the Windows OpenSSH client.
 
-== Instructions
+== Install `wsl-ssh-pageant`
 
-. Download `wsl-ssh-pageant-amd64-gui.exe` from the https://github.com/benpye/wsl-ssh-pageant/releases[latest release] of `wsl-ssh-pageant`
+Download `wsl-ssh-pageant-amd64-gui.exe` from the https://github.com/benpye/wsl-ssh-pageant/releases[latest release] of `wsl-ssh-pageant`{wj}footnote:[`wsl-ssh-pageant` v20201121.2 as of this writing.]
 
-. Create a `.bat` file with the following content
+NOTE: The `-gui` version doesn't actually provide a GUI but rather it doesn't open a terminal while the non-gui version does.
+
+== Setup `wsl-ssh-pageant`
+
+. Open the startup directory by pressing kbd:[⊞Win + R] and typing `shell:startup↵`
+
+. Create a `.bat` file with the following content{wj}footnote:[Sourced from https://github.com/microsoft/vscode-remote-release/issues/61#issuecomment-508651407[microsoft/vscode-remote-release#61].]
 +
 [source,bat]
 ----
@@ -29,10 +46,9 @@ SETX SSH_AUTH_SOCK \\.\pipe\ssh-pageant
 START /B "" "C:\SSH\wsl-ssh-pageant-amd64-gui.exe" --systray --winssh ssh-pageant
 ----
 
-. Open VS Code and connect to a remote host.
+. Run the `.bat` file
+
+== Use VS Code Remote Development
+
+Open VS Code and connect to a remote host.
 You should no longer be prompted for a password.
-
-== References
-
-https://github.com/microsoft/vscode-remote-release/issues/61#issuecomment-508651407
-
