--- a/content/posts/wsl2.adoc
+++ b/content/posts/wsl2.adoc
@@ -12,17 +12,21 @@ tags:
 :idprefix:
 :idseparator: -
 
-NOTE: 2020-11-25 -- Added <<ssh-into-wsl2>>.
-
-NOTE: 2020-11-27 -- Changed Docker from edge to stable.  Simplified Windows Terminal settings.
-
-NOTE: 2020-11-29 -- Added workaround for older Docker images.
-
 This article documents the setup of WSL2 for local and remote development.
 Local development is supported by Docker.
 For remote development, WSL2 effectively acts as a bridge.
 Remote development is done via SSH with support for X11 forwarding.
 This allows X11 applications to be run on the remote host and display on the Windows desktop.
+
+[NOTE]
+.CHANGELOG
+====
+* 2020-11-25 -- Added <<ssh-into-wsl2>>.
+* 2020-11-27 -- Changed Docker from edge to stable.
+Edge is no longer required.
+* 2020-11-27 -- Simplified Windows Terminal settings.
+* 2020-11-29 -- Added workaround for older Docker images.
+====
 
 == Install WSL2
 
