--- a/content/posts/rust-async-serial.adoc
+++ b/content/posts/rust-async-serial.adoc
@@ -17,17 +17,17 @@ The embedded processor is interogated via memory peek and poke commands that are
 .Existing hardware test setup
 ----
 digraph G {
-    rankdir="LR";
+    rankdir="LR"
 
     subgraph cluster_host {
-        label="Host System";
-        sp [label="Serial\nPort", shape=square];
-        sc [label="Serial\nConsole", shape=square];
-        sc -> sp [dir=both];
+        label="Host System"
+        sp [label="Serial\nPort", shape=square]
+        sc [label="Serial\nConsole", shape=square]
+        sc -> sp [dir=both]
     }
 
-    es [label="Embedded\nSystem", shape=square];
-    sp -> es [dir=both, label="UART cable"];
+    es [label="Embedded\nSystem", shape=square]
+    sp -> es [dir=both, label="UART cable"]
 }
 ----
 
@@ -44,13 +44,13 @@ The naive way to do this is to simply open the serial port in both processes.
 .Enhanced hardware test setup
 ----
 digraph G {
-    rankdir="LR";
+    rankdir="LR"
 
     subgraph cluster_host {
         label="Host System"
         sp [label="Serial\nPort", shape=square]
         sc [label="Serial\nConsole", shape=square]
-        gui [label="GUI", shape=square]
+        gui [label="GUI", shape=square, style=filled, fillcolor="#65ffb2"]
 
         sc -> sp [dir=both, label="?", style=dotted]
         gui -> sp [dir=both, label="?", style=dotted]
@@ -80,7 +80,7 @@ Everything that is transmitted on one serial port is replicated on the other two
 .Enhanced hardware test setup
 ----
 digraph G {
-    rankdir="LR";
+    rankdir="LR"
 
     subgraph cluster_host {
         label="Host System"
@@ -88,9 +88,9 @@ digraph G {
         sc [label="Serial\nConsole", shape=square]
         gui [label="GUI", shape=square]
 
-        vmux [label="Virtual\nMux", shape=square]
-        vsp0 [label="Virtual\nSerial Port", shape=square]
-        vsp1 [label="Virtual\nSerial Port", shape=square]
+        vmux [label="Virtual\nMux", shape=square, style=filled, fillcolor="#65ffb2"]
+        vsp0 [label="Virtual\nSerial Port", shape=square, style=filled, fillcolor="#65ffb2"]
+        vsp1 [label="Virtual\nSerial Port", shape=square, style=filled, fillcolor="#65ffb2"]
 
         vmux -> sp [dir=both]
         sc -> vsp0 [dir=both]
