--- a/content/posts/rust-tauri-async.adoc
+++ b/content/posts/rust-tauri-async.adoc
@@ -1,5 +1,5 @@
 ---
-title: "Rust Tauri Async"
+title: "Tauri + Async Rust Process"
 date: 2022-08-17T00:43:11Z
 draft: true
 ---
@@ -8,8 +8,8 @@ draft: true
 
 == Goal
 
-Integrate async code into a Tauri application.
-More specifically we want bidirectional communication between the Tauri webview and async Rust code.
+Integrate an async Rust process into a Tauri application.
+More specifically we want bidirectional communication between the Tauri webview and an async Rust process.
 Either side can initiate a request.
 A request may or may not have a corresponding response.
 
@@ -25,9 +25,9 @@ digraph G {
     subgraph cluster_tauri {
         label="Tauri\nApplication"
 
+        wv [label="Webview\n(JavaScript)", shape=square]
         mt [label="Main Thread\n(Rust)", shape=square]
         ap [label="Async\nProcess\n(Rust)", shape=square]
-        wv [label="Webview\n(JavaScript)", shape=square]
 
         wv -> mt -> ap [constraint=false]
         ap -> mt -> wv
@@ -39,11 +39,6 @@ So we can break this up into two smaller problems: bidirectional communication b
 
 * the webview (JavaScript) and the main thread (Rust)
 * the main thread (Rust) and the async process (Rust)
-
-=== Additional Details
-
-The async process can generate solicited or unsolicited messages.
-In other words, messages that JavaScript asked for and messages that JavaScript did not ask for.
 
 == Create a Tauri App
 
@@ -81,12 +76,33 @@ npm run tauri dev
 .The Tauri application with the Vite + Vue template
 image::create-tauri-app-vite-vue.png["The default application window for the Tauri Vite + Vue template"]
 
-== Async Process
+== The Async Process
 
 Next, we need to know what our async process looks like.
-We're going to keep it really generic here to make this generally applicable to many specific applications.
+We'll keep it really basic to make this more generally applicable to various applications.
 
-We'll model our async process as a simple async function with an infinite loop that pulls input strings from an input channel and pushes output strings into an output channel.
+[graphviz]
+----
+digraph G {
+    rankdir=RL
+
+    subgraph cluster_tauri {
+        label="Tauri\nApplication"
+
+        wv [label="Webview\n(JavaScript)", shape=square]
+        mt [label="Main Thread\n(Rust)", shape=square]
+        ap [label="Async\nProcess\n(Rust)", shape=square, style=filled, fillcolor=lightblue]
+
+        wv -> mt [constraint=false]
+        mt -> ap [constraint=false, label=mpsc]
+        ap -> mt [label=mpsc]
+        mt -> wv
+     }
+}
+----
+
+The async process model will take input via a mpsc (Multi-Producer, Single-consumer) channel and give output via another mpsc channel.
+The model is a simple loop that takes strings from the input channel and returns them on the output channel.
 
 Our async process model in `src-tauri/src/main.rs`
 
@@ -99,39 +115,64 @@ use tokio::sync::mpsc;
 async fn async_process_model(
     mut input_rx: mpsc::Receiver<String>,
     output_tx: mpsc::Sender<String>,
-) -> Result<(), Box<dyn std::error::Error>> {
+) -> Result<(), Box<dyn std::error::Error + Send + Sync>> {
     loop {
-        let input = input_rx.recv().await.ok_or_else(|| "channel closed")?;
-        let output = input;
-        output_tx.send(output).await?;
+        while let Some(input) = input_rx.recv().await {
+            let output = input;
+            output_tx.send(output).await?;
+        }
     }
 }
 ----
 
-Even though Tauri uses and re-exports (via the https://docs.rs/tauri/1.0.5/tauri/async_runtime/index.html[`tauri::async_runtime`] module) some of the Tokio types, it doesn't re-export everything we need.
+Even though Tauri uses and re-exports some of the Tokio types (via the https://docs.rs/tauri/1.0.5/tauri/async_runtime/index.html[`tauri::async_runtime`] module), it doesn't re-export everything we need.
 So we'll need to add Tokio.
+We'll also add Tracing and Tracing Subscriber while were at it.
 
 [source,sh]
 ----
 cd tauri-src
 cargo add tokio --features full
+cargo add tracing tracing-subscriber
 ----
 
 == Bidirectional Communication between Rust and JavaScript
 
+[graphviz]
+----
+digraph G {
+    rankdir=RL
+
+    subgraph cluster_tauri {
+        label="Tauri\nApplication"
+
+        wv [label="Webview\n(JavaScript)", shape=square, style=filled, fillcolor=lightblue]
+        mt [label="Main Thread\n(Rust)", shape=square, style=filled, fillcolor=lightblue]
+        ap [label="Async\nProcess\n(Rust)", shape=square]
+
+        wv -> mt [constraint=false, label=Commands]
+        mt -> ap [constraint=false]
+        ap -> mt
+        mt -> wv [label=Events]
+     }
+}
+----
+
 Tauri provides two communication mechanisms Events and Commands.
+The Tauri docs do a good job covering both.
+
+=== Comands vs Events
+
 Events be send in either direction while Commands can only go from JavaScript to Rust.
 
-I choose to use Commands for JavaScript to Rust and Events for Rust to JavaScript with the assumption that Commands are better than Events.footnote:[I don't have an evidence to back this up.]
-
-Establishing two-way communication between Rust and JavaScript is pretty straight-forward.
-The Tauri docs do a good job covering them.
+For sending messages from JavaScript to Rust, I prefer Commands.
+Commands automate a lot of the boiler plate like message deserialization and state management.
 
 === Possible Simplification
 
-You can get by with async Tauri Commands only if:
+You can get by with only async Tauri Commands (i.e. without Tauri Events) if:
 
-* JavsScript initiates the communication
+* JavsScript initiates all communication
 * Requests/responses are one-to-one or one-to-none
 
 Otherwise, you also need Tauri Events.
@@ -153,15 +194,15 @@ const outputs = ref([]);
 const inputs = ref([]);
 
 function sendOutput() {
-    console.log("js: js2rs: " + output.value)
-    outputs.value.push({ timestamp: Date.now(), message: output.value })
-    invoke('js2rs', { message: output.value })
+  console.log("js: js2rs: " + output.value)
+  outputs.value.push({ timestamp: Date.now(), message: output.value }) // <2>
+  invoke('js2rs', { message: output.value }) // <3>
 }
 
-await listen('rs2js', (event) => {
-    console.log("js: rs2js: " + event)
-    let input = event.payload
-    inputs.value.push({ timestamp: Date.now(), message: input })
+await listen('rs2js', (event) => { // <4>
+  console.log("js: rs2js: " + event)
+  let input = event.payload
+  inputs.value.push({ timestamp: Date.now(), message: input }) // <5>
 })
 </script>
 
@@ -171,7 +212,7 @@ await listen('rs2js', (event) => {
       <label for="input" style="display: block;">Message</label>
       <input id="input" v-model="output">
       <br>
-      <button @click="sendOutput()">Send to Rust</button>
+      <button @click="sendOutput()">Send to Rust</button> <!--1-->
     </div>
     <div style="grid-column: 1; grid-row: 2;">
       <h3>js2rs events</h3>
@@ -192,6 +233,11 @@ await listen('rs2js', (event) => {
   </div>
 </template>
 ----
+<1> Clicking this button calls `sendOutput()`
+<2> Add the 'js2rs' message to the outputs array to show the user what was sent
+<3> Send the 'js2rs' message to Rust via the Tauri `invoke` API
+<4> Setup a listener for the 'rs2js' event
+<5> Add the 'rs2js' message to the `inputs` array to show the user what was received
 
 Since the `HelloWorld` component is now calling an async function in setup, the `<HelloWorld>` component must now be placed in a https://vuejs.org/guide/built-ins/suspense.html[`<Suspense>`] component.
 Modify `src/App.vue` as follows
@@ -204,7 +250,75 @@ Modify `src/App.vue` as follows
 +  </Suspense>
 ----
 
-== Bidirectional Communication between the Main Thread and an Async Process
+=== The Rust Side
+
+Here is the Rust side of the bidirectional communication between the main thread and the webview.
+Most of the bidirectional communication between the main thread and the async process has been commented out.
+
+[source,rust]
+----
+use tauri::Manager;
+use tokio::sync::mpsc;
+
+// ...
+
+fn main() {
+    // ...
+
+    let (async_proc_input_tx, async_proc_input_rx) = mpsc::channel(1);
+    let (async_proc_output_tx, mut async_proc_output_rx) = mpsc::channel(1);
+
+    tauri::Builder::default()
+        // ...
+        .invoke_handler(tauri::generate_handler![js2rs])
+        .setup(|app| {
+            // ...
+
+            let app_handle = app.handle();
+            tauri::async_runtime::spawn(async move {
+                // An infinite loop that takes output from the async process
+                // and sends it to the webview via a Tauri Event
+                loop {
+                    if let Some(output) = async_proc_output_rx.recv().await {
+                        rs2js(output, &app_handle);
+                    }
+                }
+            });
+
+            Ok(())
+        })
+        .run(tauri::generate_context!())
+        .expect("error while running tauri application");
+}
+
+// A function that sends a message from Rust to JavaScript via a Tauri Event
+fn rs2js<R: tauri::Runtime>(message: String, manager: &impl Manager<R>) {
+    info!(?message, "rs2js");
+    manager
+        .emit_all("rs2js", message)
+        .unwrap();
+}
+
+// The Tauri command that gets called when Tauri JavaScript API `invoke`
+// command is called
+//
+// Known limitation: stateful async commands must return a Result
+// * https://github.com/tauri-apps/tauri/issues/2533
+// * https://github.com/tauri-apps/tauri/discussions/4317#discussioncomment-2926385
+#[tauri::command]
+async fn js2rs(
+    message: String,
+    state: tauri::State<'_, AsyncProcInputTx>
+) -> Result<(), String> {
+    let input = message;
+    println!("rs: js2rs: {}", input);
+    // ...
+}
+
+// ...
+----
+
+== Bidirectional Communication between the Main Thread and the Async Process
 
 Passing messages between Rust and JavaScript may be straightforward but doing so between the Tauri main thread and an async process was not.
 Mostly because I couldn't find any examples.
@@ -214,14 +328,13 @@ I'm pretty happy with the final implementation.
 The inputs and outputs of the async process implemented as `tokio::mpsc` (Multi-Producer Single-Consumer).
 We only have a single producer but there isn't a more specific channel primitive for single-producer, single-consumer.
 
-=== Who Owns the Async Runtime
+=== Who Owns the Async Runtime?
 
-Tauri uses Tokio internally and abstracts this complexity from the user.
-For example, Tauri uses Tokio but doesn't require an async main and a `#[tokio::main]` annotation.
-Tauri hides all of this from use.
+By default, Tauri owns and initializes the Tokio runtime.
+Because of this, you don't need an async main and a `#[tokio::main]` annotation.
 
-Tauri owns and constructs the Tokio runtime by default but allows you to manage Tokio yourself.
-We can do this by simply adding the `#[tokio::main]` annotation, adding `async` to main, and then telling Tauri to use our Tokio runtime.
+For additional flexibility, Tauri allows us to own and initialize the Tokio runtime ourselves.
+We can do this by adding the `#[tokio::main]` annotation, adding `async` to main, and then telling Tauri to use our Tokio runtime.
 
 [source,rust]
 ----
@@ -233,7 +346,55 @@ async fn main() {
 }
 ----
 
-TODO: Is this even necessary if we do all async in Tauri (i.e. inside `tauri::Builder::setup`)?
+==== Inside Tauri
+
+If we make all of our async calls inside of Tauri, then Tauri can own and manage the Tokio runtime.
+
+[source,rust]
+----
+fn main() {
+    // ...
+
+    tauri::Builder::default()
+        .setup(|app| {
+            tokio::spawn(async move {
+                async_process(
+                    async_process_input_rx,
+                    async_process_output_tx,
+                ).await
+            });
+
+            Ok(())
+        }
+        .run(...)
+        // ...
+}
+----
+
+==== Outside Tauri
+
+If we make any async calls outside of Tauri, then we need to own and manage the Tokio runtime.
+
+[source,rust]
+----
+#[tokio::main]
+async fn main() {
+    tauri::async_runtime::set(tokio::runtime::Handle::current());
+
+    // ...
+
+    tokio::spawn(async move {
+        async_process(
+            async_process_input_rx,
+            async_process_output_tx,
+        ).await
+    });
+
+    tauri::Builder::default()
+        .run(...)
+        // ...
+}
+----
 
 === Creating the Channels
 
@@ -241,19 +402,24 @@ Channels need to be created for both directions: inputs in to the async process 
 They should be created with the least scope possible.
 To determine this, we need to figure out where we will be using them.
 
-TODO: Finish
+[source,rust]
+----
+fn main() {
+    let (async_process_input_tx, async_process_input_rx) = mpsc::channel(1);
+    let (async_process_output_tx, async_process_output_rx) = mpsc::channel(1);
+
+    // ...
+}
+----
 
 === Running the Async Process
 
-The async process can be run insider of Tauri or outside of Tauri.
-Either will work but running outside of Tauri will require owning the Tokio runtime.
-
-==== Inside Tauri
+We'll have Tauri own and manage the Tokio runtime so we'll need to run the async process inside `tauri::Builder::setup()`.
 
 [source,rust]
 ----
-async fn main() {
-    ...
+fn main() {
+    // ...
 
     let (async_process_input_tx, async_process_input_rx) = mpsc::channel(1);
     let (async_process_output_tx, async_process_output_rx) = mpsc::channel(1);
@@ -261,39 +427,84 @@ async fn main() {
     tauri::Builder::default()
         .setup(|app| {
             tokio::spawn(async move {
-                async_process(async_process_input_rx, async_process_output_tx).await
+                async_process(
+                    async_process_input_rx,
+                    async_process_output_tx,
+                ).await
             });
 
             Ok(())
         }
         .run(...)
-        ...
-}
-----
-
-==== Outside Tauri
-
-[source,rust]
-----
-async fn main() {
-    ...
-
-    let (async_process_input_tx, async_process_input_rx) = mpsc::channel(1);
-    let (async_process_output_tx, async_process_output_rx) = mpsc::channel(1);
-
-    tokio::spawn(async move {
-        async_process(async_process_input_rx, async_process_output_tx).await
-    });
-
-    tauri::Builder::default()
-        .run(...)
-        ...
+        // ...
 }
 ----
 
 === Main Thread to Async Process
 
+[source,rust]
+----
+// ...
+
+struct AsyncProcInputTx {
+    inner: Mutex<mpsc::Sender<String>>,
+}
+
+fn main() {
+    // ...
+
+    let (async_proc_input_tx, async_proc_input_rx) = mpsc::channel(1);
+    // ...
+
+    tauri::Builder::default()
+        .manage(AsyncProcInputTx {
+            inner: Mutex::new(async_proc_input_tx),
+        })
+        // ...
+}
+
+#[tauri::command]
+async fn js2rs(message: String, state: tauri::State<'_, AsyncProcInputTx>) -> Result<(), String> {
+    info!(?message, "js2rs");
+    let async_proc_input_tx = state.inner.lock().await;
+    async_proc_input_tx
+        .send(message)
+        .await
+        .map_err(|e| e.to_string())
+}
+----
+
+=== Notes on Interior Mutability
+
+* https://github.com/tauri-apps/tauri/discussions/3911#discussioncomment-2585191
+* https://github.com/tauri-apps/tauri/discussions/1336#discussioncomment-1936686
+
 === Async Process to Main Thread
+
+[source,rust]
+----
+fn main() {
+    // ...
+
+    tauri::Builder::default()
+        // ...
+        .setup(|app| {
+            // ...
+
+            let app_handle = app.handle();
+            tauri::async_runtime::spawn(async move {
+                loop {
+                    if let Some(output) = async_proc_output_rx.recv().await {
+                        rs2js(output, &app_handle);
+                    }
+                }
+            });
+
+            Ok(())
+        })
+        // ...
+}
+----
 
 == Integrating Async Code
 
