content: add tags

--- a/content/posts/tauri-async-rust-process.adoc
+++ b/content/posts/tauri-async-rust-process.adoc
@@ -1,6 +1,10 @@
 ---
 title: "Tauri + Async Rust Process"
 date: 2022-08-17T00:43:11Z
+tags:
+- Software
+- Tauri
+- Rust
 ---
 
 The complete source code for this post is available at https://github.com/rfdonnelly/tauri-async-example.
